<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <include
            layout="@layout/sodk_editor_toolbar_title"/>
        <include
            layout="@layout/sodk_editor_pdf_tab_layout"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ln_top_tool"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_file"
                    android:layout_width="wrap_content"
                    android:text="@string/file"
                    style="@style/TextTitleBar"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_typo"
                    android:layout_width="wrap_content"
                    android:text="@string/typo"
                    style="@style/TextTitleBar"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_edit"
                    android:layout_width="wrap_content"
                    android:text="@string/edit"
                    style="@style/TextTitleBar"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_insert"
                    android:layout_width="wrap_content"
                    android:text="@string/insert"
                    style="@style/TextTitleBar"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/ln_menu_annotate"
                    android:layout_width="wrap_content"
                    android:text="@string/annotate"
                    style="@style/TextTitleBar"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_page"
                    android:layout_width="wrap_content"
                    android:text="@string/lib_page"
                    style="@style/TextTitleBar"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_format"
                    android:layout_width="wrap_content"
                    android:text="@string/format"
                    style="@style/TextTitleBar"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_formulas"
                    android:layout_width="wrap_content"
                    android:text="@string/formulas"
                    style="@style/TextTitleBar"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ln_menu_slide"
                    android:layout_width="wrap_content"
                    android:text="@string/slide"
                    android:visibility="gone"
                    style="@style/TextTitleBar"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <include layout="@layout/layout_loading_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0">

            <LinearLayout
                android:id="@id/page_and_list_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="@integer/sodk_editor_page_width_percentage"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <RelativeLayout
                            android:id="@id/doc_inner_container"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:clipChildren="false">

                            <LinearLayout
                                android:id="@id/doc_cover"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@color/sodk_editor_transparent"
                                android:orientation="vertical"
                                android:visibility="gone" />

                            <LinearLayout
                                android:id="@id/doc_note_editor"
                                android:layout_width="@dimen/sodk_editor_note_editor_width"
                                android:layout_height="wrap_content"
                                android:background="@color/sodk_editor_pdf_note_color"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <office.file.ui.editor.SOTextView
                                    android:id="@id/doc_note_editor_author"
                                    style="@style/sodk_editor_note_editor_textview_style"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textSize="20.0sp"
                                    android:textStyle="bold" />

                                <office.file.ui.editor.SOTextView
                                    android:id="@id/doc_note_editor_date"
                                    style="@style/sodk_editor_note_editor_textview_style"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textSize="16.0sp" />

                                <office.file.ui.editor.SOEditText
                                    android:id="@id/doc_note_editor_text"
                                    style="@style/sodk_editor_note_editor_textview_style"
                                    android:layout_height="wrap_content"
                                    android:gravity="top"
                                    android:imeOptions="flagNoFullscreen"
                                    android:minLines="6"
                                    android:text="" />
                            </LinearLayout>

                            <office.file.ui.editor.PDFFormTextEditor
                                android:id="@id/pdf_form_text_editor_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clipChildren="false"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <office.file.ui.editor.SOEditText
                                    android:id="@id/pdf_text_editor"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:background="@color/sodk_editor_transparent"
                                    android:cursorVisible="false"
                                    android:focusableInTouchMode="true"
                                    android:gravity="top"
                                    android:imeOptions="flagNoFullscreen"
                                    android:text=""
                                    android:textColor="@color/sodk_editor_transparent"
                                    android:textColorHighlight="@color/sodk_editor_transparent_01" />

                                <office.file.ui.editor.SelectionHandle
                                    android:id="@id/pdf_form_text_editor_handle_upper"
                                    android:layout_width="40.0dip"
                                    android:layout_height="40.0dip"
                                    android:tag="1"
                                    android:visibility="gone" />

                                <office.file.ui.editor.SelectionHandle
                                    android:id="@id/pdf_form_text_editor_handle_lower"
                                    android:layout_width="40.0dip"
                                    android:layout_height="40.0dip"
                                    android:tag="2"
                                    android:visibility="gone" />
                            </office.file.ui.editor.PDFFormTextEditor>

                            <office.file.ui.editor.PDFFormCheckboxEditor
                                android:id="@id/pdf_form_checkbox_editor_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <office.file.ui.editor.SOEditText
                                    android:id="@id/pdf_checkbox_editor"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:background="@color/sodk_editor_transparent"
                                    android:cursorVisible="false"
                                    android:focusableInTouchMode="true"
                                    android:gravity="top"
                                    android:imeOptions="flagNoFullscreen"
                                    android:text=""
                                    android:textColor="@color/sodk_editor_transparent"
                                    android:textColorHighlight="@color/sodk_editor_transparent_01" />
                            </office.file.ui.editor.PDFFormCheckboxEditor>

                            <office.file.ui.editor.SOTextView
                                android:id="@id/footer_page_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerInParent="true"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:background="@drawable/r4_black"
                                android:padding="@dimen/_5sdp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_10sdp" />
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@id/pages_container"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="@integer/sodk_editor_pagelist_width_percentage"
                    android:background="@color/sodk_editor_pdf_pages_bg"
                    android:orientation="vertical"
                    android:paddingLeft="6.0dip"
                    android:paddingRight="6.0dip"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.gms.ads.ez.BannerAd
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:elevation="1dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/footer"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/fileTab"
            android:visibility="gone"
            layout="@layout/sodk_editor_toolbar_file"/>
        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ln_menu_editor"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:minHeight="@dimen/_35sdp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <include
                    android:visibility="gone"
                    layout="@layout/sodk_editor_toolbar_roolback"/>
                <include
                    android:id="@+id/annotateTab"
                    layout="@layout/sodk_editor_toolbar_pdf_annotate"/>
                <include
                    android:id="@+id/pagesTab"
                    layout="@layout/sodk_editor_toolbar_pdf_page"/>
                <include
                    android:id="@id/searchTab"
                    layout="@layout/sodk_editor_search_toolbar" />

                <include
                    android:id="@+id/redactTab"
                    android:visibility="gone"
                    layout="@layout/sodk_editor_redact_toolbar" />
            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:layout_width="match_parent"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="1dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>